# ml-from-scratch

./: .gitignore  API_STANDARDS.md  DecisionTreeClasifier.ipynb  KNN.ipynb  README.md  TODO.md  TODO.txt  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
benchmarks/: knn_vs_sklearn.py  tree_vs_sklearn.py
examples/: kmeans_demo.py  knn_demo.py  tree_demo.py
mlfs/: __init__.py  exceptions.py
mlfs/base/: base_estimator.py  mixins.py
mlfs/clustering/: kmeans.py
mlfs/metrics/: __init__.py  distances.py
mlfs/metrics/classification/: accuracy_score.py
mlfs/naive_bayes/: __init__.py  gaussian_naive_bayes.py
mlfs/neighbors/: __init__.py  knn.py
mlfs/tree/: decision_tree.py
mlfs/utils/: probability.py  validation.py
tests/: test_decision_tree.py  test_gaussian_naive_bayes.py  test_kmeans.py  test_knn.py
